--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "test": "cross-env FOOBAR=testing jest --watch --verbose --coverage --runInBand",
+    "server": "nodemon index.js",
+    "start": "node index.js" 
   },
   "repository": {
     "type": "git",
